--- a/bike-store/src/styles.scss
+++ b/bike-store/src/styles.scss
@@ -1,1 +1,85 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+@import '~ngx-toastr/toastr';
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+/* Color Theme Swatches in Hex */
+$Bikes-1-hex: #F0B725;
+$Bikes-2-hex: #F77728;
+$Bikes-3-hex: #E03200;
+$Bikes-4-hex: #F74028;
+$Bikes-5-hex: #ED2642;
+
+
+body {
+    background-color: #ededed;
+}
+
+.line {
+    background-color: $Bikes-2-hex;
+    height          : 5px;
+    width           : 100%;
+}
+
+.bike-nav {
+    background-color: $Bikes-5-hex;
+}
+
+.bike-table {
+    thead {
+        
+        background-color: scale-color($Bikes-2-hex, $lightness: 20%);
+        color           : white;
+    }
+}
+
+.btn-outline-primary {
+    border-color: $Bikes-2-hex !important;
+    color       : $Bikes-2-hex;
+
+    &:hover {
+        background-color: $Bikes-2-hex !important;
+        color           : white;
+    }
+
+}
+
+.dropdown-item {
+    &:hover {
+        background-color: white !important;
+        color           : black;
+    }
+}
+
+.dropdown-toggle {
+    background-color: white;
+    color           : $Bikes-2-hex;
+    
+    &:visited{
+        background-color: $Bikes-2-hex !important;
+        color           : white;
+    }
+    &:hover {
+        background-color: $Bikes-2-hex !important;
+        color           : white;
+    }
+
+    &:focus {
+        background-color: $Bikes-2-hex !important;
+        color           : white;
+    }
+
+    &:active {
+        background-color: $Bikes-2-hex !important;
+        color           : white;
+    }
+}
+
+.btn-primary {
+    background-color: $Bikes-2-hex !important;
+}
