--- a/bike-store/src/app/Administration/orders-report/orders-report.component.html
+++ b/bike-store/src/app/Administration/orders-report/orders-report.component.html
@@ -1,1 +1,61 @@
-<p>orders-report works!</p>
+<article class="card-body" style="min-height: 450px;">
+    <div class="row">
+        <div class="col-lg-12">
+            <form #form autocomplete="off">
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-lg-3" style="text-align: center;">
+                            <label>Seleccione un periodo: </label>
+                        </div>
+                        <div class="col-lg-1" style="text-align: center;">
+                            <label>Inicio: </label>
+                        </div>
+                        <div class="col-lg-2" style="text-align: center;">
+                            <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="startDate"
+                                (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true"
+                                [enableTime]="false" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set"
+                                [ngModelOptions]="{standalone: true}" />
+                        </div>
+                        <div class="col-lg-1" style="text-align: center;">
+                            <label>Fin: </label>
+                        </div>
+                        <div class="col-lg-2" style="text-align: center;">
+                            <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="endDate"
+                                (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true"
+                                [enableTime]="false" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set"
+                                [ngModelOptions]="{standalone: true}" />
+                        </div>
+                        <div class="col-lg-3">
+                            <button class="btn btn-primary btn-block" (click)="getReport()">Aceptar</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+            <div class="table-responsive">
+                <div class=table-wrapper>
+                    <table class="table table-hover bike-table">
+                        <thead>
+                            <tr class="d-flex">
+                                <th class="col-6">Clientes</th>
+                                <th class="col-6">Cantidad de pedidos</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="d-flex" *ngFor="let line of report">
+                                <td class="col-6">{{line.client}}</td>
+                                <td class="col-6">{{line.orders}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg 3"></div>
+    </div>
+</article>
