--- a/bike-store/src/app/Administration/product-category-report/product-category-report.component.html
+++ b/bike-store/src/app/Administration/product-category-report/product-category-report.component.html
@@ -1,1 +1,70 @@
-<p>product-category-report works!</p>
+<article class="card-body" style="min-height: 450px;">
+    <div class="row">
+        <div class="col-lg-12">
+            <form #form autocomplete="off">
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-lg-3" style="text-align: center;">
+                            <label>Seleccione un periodo: </label>
+                        </div>
+                        <div class="col-lg-1" style="text-align: center;">
+                            <label>Categoría: </label>
+                        </div>
+                        <div class="col-lg-2" style="text-align: center;">
+                            <div ngbDropdown class="d-inline-block" style="width: 100%;">
+                                <button class="btn btn-outline-primary" id="dropdownBasic3"
+                                    ngbDropdownToggle>{{selectedCategory}}</button>
+                                <div ngbDropdownMenu aria-labelledby="dropdownBasic3">
+                                    <button *ngFor="let category of categories" ngbDropdownItem
+                                        (click)="selectCategory(category)">{{category}}
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-1" style="text-align: center;">
+                            <label>Mes: </label>
+                        </div>
+                        <div class="col-lg-2" style="text-align: center;">
+                            <div ngbDropdown class="d-inline-block" style="width: 100%;">
+                                <button class="btn btn-outline-primary" id="dropdownBasic3"
+                                    ngbDropdownToggle>{{selectedMonth}}</button>
+                                <div ngbDropdownMenu aria-labelledby="dropdownBasic3">
+                                    <button *ngFor="let month of months" ngbDropdownItem
+                                        (click)="selectMonth(month)">{{month}}</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <button class="btn btn-primary btn-block" (click)="getReport()">Aceptar</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+            <div class="table">
+                <div class=table-wrapper>
+                    <table class="table table-hover bike-table">
+                        <thead>
+                            <tr class="d-flex">
+                                <th class="col-6">Producto</th>
+                                <th class="col-6">Monto de ventas</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="d-flex" *ngFor="let line of report">
+                                <td class="col-6">{{line.product}}</td>
+                                <td class="col-6">{{line.sales}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg 3"></div>
+    </div>
+</article>
