--- a/bike-store/src/app/Administration/income-report/income-report.component.html
+++ b/bike-store/src/app/Administration/income-report/income-report.component.html
@@ -1,4 +1,4 @@
-<article class="card-body" style="min-height: 450px;">
+<article class="card-body">
     <div class="row">
         <div class="col-lg-12">
             <form #form autocomplete="off">
